<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/scheduleSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:iconifiedByDefault="false"
        app:showAsAction="always" />
</menu>